4-Kubernetes/2-accessing minikube dashboard using ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:

  name: dashboard-ingress

  namespace: kubernetes-dashboard

spec:

  rules:

  - host: minikube-dashboard.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: kubernetes-dashboard

            port:

              number: 80
